fix(mobile): Scrolling is stuck on small devices
- On small devices this element gets it own scrollbar, which means that
  you can't scroll the page until the smaller element gets scrolled.
  Giving the feeling that the page is "stuck"

--- a/src/sentry/static/sentry/less/layout.less
+++ b/src/sentry/static/sentry/less/layout.less
@@ -454,6 +454,7 @@ footer {
 
   .app {
     overflow-x: hidden;
+    overflow-y: hidden;
   }
 
   .messages-container {
